# Campus-Event-Student-Service-Management

./: .env.development  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI-CD-STATUS.md  Dockerfile  MKDOCS-MIGRATION.md  Makefile  README.md  UV-CHEATSHEET.md  activate.sh  app.py  docker-compose.yml  health_check.py  main.py  mkdocs.yml  models.py  pyproject.toml  qa-phases.sh  qa-simple-real.sh  requirements-dev.txt  requirements.txt  research.md  setup-dev.sh  sonar-project.properties  uv-guide.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  code-quality.yml  deploy.yml  docs.yml  performance.yml  security.yml
data/: data.py
docs/: CI-CD.md  development.md  getting-started.md  index.md
docs/ci-cd/: migration-guide.md  overview.md
docs/development/: contributing.md  setup.md
docs/getting-started/: installation.md  quick-start.md
docs/legacy-md/: CI-CD-README.md  MKDOCS-MIGRATION.md  UV-CHEATSHEET.md  research.md
docs/user-guide/: students.md
site/: 404.html  index.html  sitemap.xml
site/CI-CD/: index.html
site/CI-CD/migration-guide/: index.html
site/CI-CD/overview/: index.html
site/CI-CD/uv-guide/: index.html
site/development/: index.html
site/development/contributing/: index.html
site/getting-started/: index.html
site/getting-started/installation/: index.html
site/getting-started/quick-start/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
tabs/: __init__.py  analytics.py  dashboard.py  events.py  requests.py  students.py
tests/: conftest.py  test.py  test2.py  test_integration.py  test_main_system.py  test_system.py
